# msgraph-delta-query

./: .env.example  .flake8  .gitignore  AUTHENTICATION.md  AZURE_BLOB_STORAGE.md  BUILD.md  CODE_QUALITY_REPORT.md  LICENSE  PACKAGE_STRUCTURE.md  PUBLISHING.md  README.md  SDK_MIGRATION_SUMMARY.md  SDK_OBJECTS.md  STORAGE_REFACTORING.md  TEST_COVERAGE_REPORT.md  comprehensive_test.py  final_test.py  pyproject.toml  requirements-azure.txt  requirements-functions.txt  requirements-test.txt  requirements.txt  run_tests.py  run_unit_tests.py  setup.py  test_authentication.py  test_base_request_config.py  test_delta_parameters.py  test_improved_client.py  test_new_client.py  test_nextlink_fix.py  test_pagination_logic.py  test_pagination_structure.py  test_refactored_storage.py  test_return_types.py  test_reverted_auth.py  test_sdk.py  test_sdk_implementation.py  test_sdk_objects.py
examples/: README.md  advanced_stream_with_casting.py  applications_localfile_sync.py  azure_blob_usage.py  basic_usage.py  casting_example.py  change_summary_demo.py  delta_query_stream_example.py  filtered_users_only_example.py  multi_resource_sync.py  periodic_sync.py  sdk_objects_example.py  serviceprincipals_localfile_sync.py  simple_app_sync.py  simple_applications_sync.py  simple_azure_sync.py  simple_full_incremental_sync.py  simple_local_sync.py  simple_periodic_sync.py  simple_service_principals_sync.py  simple_stream_example.py  test_token_refresh.py  test_users_sync.py  user_sync.py  users_azureblob_sync.py  users_localfile_sync.py
research/: README.md
research/client_verification/: comprehensive_delta_handling_verification.py
research/graph_behavior/: delta_link_behavior_study.py
research/storage_verification/: azure_blob_priority_verification.py  check_stored_delta_links.py  storage_logging_verification.py
src/msgraph_delta_query/: __init__.py  client.py  client_new.py  models.py  storage.py
src/msgraph_delta_query/storage/: __init__.py  azure_blob.py  base.py  local_file.py
tests/: README.md  __init__.py  conftest.py  test_azure_blob_comprehensive_coverage.py  test_azure_blob_simple_mocking.py  test_azure_blob_storage_branch_coverage.py  test_azure_blob_with_azurite.py  test_client.py  test_client_advanced_coverage.py  test_client_branch_and_edge_coverage.py  test_client_comprehensive_coverage.py  test_client_error_and_fallback_coverage.py  test_client_extended_coverage.py  test_comprehensive_delta_handling.py  test_examples.py  test_init.py  test_integration.py  test_invalid_delta_links.py  test_local_file_comprehensive_coverage.py  test_local_file_storage_branch_coverage.py  test_models.py  test_models_coverage.py  test_modernization_plan.md  test_pagination_bug_regression.py  test_pagination_response_types.py  test_storage.py  test_unclosed_sessions.py
